unpackaged/main/default/objects/SSOPasseportSetting__mdt/SSOPasseportSetting__mdt.object-meta.xml
<CustomObject>
    <description>W-001572 BtoB_US1_Identifiant et mdp
Used to determine which profile and permission sets to assign to the Passeport user connecting to Salesforce (Community or B2B or other)</description>
    <label>SSO Passeport Setting</label>
    <pluralLabel>SSO Passeport Settings</pluralLabel>
</CustomObject>