unpackaged/main/default/objects/SSOPasseportSetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether setting is active</description>
    <inlineHelpText>Whether setting is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>