unpackaged/main/default/objects/SSOPasseportSetting__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Determines which setting has priority in case a user has more than one service configured</description>
    <inlineHelpText>Determines which setting has priority in case a user has more than one service configured</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>