unpackaged/main/default/objects/SSOPasseportSetting__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>Profile to assign to connecting user</description>
    <inlineHelpText>Profile to assign to connecting user</inlineHelpText>
    <label>Profile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B Customer Community Plus</fullName>
                <default>true</default>
                <label>B2B Customer Community Plus</label>
            </value>
            <value>
                <fullName>Customer Community User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>